--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>  
+
+<head>
   <base href="/puzzle_hack/">
+  <!-- <base href="/">-->
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Puzzle app for flutter hack challenge">
@@ -9,10 +11,11 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="puzzle_hack">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
   <title>Puzzle Hack Challenge</title>
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
   <script>
     var serviceWorkerVersion = null;
@@ -79,4 +82,5 @@
     }
   </script>
 </body>
+
 </html>
