--- a/web/index.html
+++ b/web/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <base href="/puzzle_hack/">
-  <!-- <base href="/">-->
+  <!--  <base href="/puzzle_hack/">-->
+  <base href="/">
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Puzzle app for flutter hack challenge">
